完全重构模块结构，升级JDER至1.9